www/static/style.css
:root {
  --color-main: #ffbf00;
  --color-main-background: #fcfcff;
  --color-table-row: #f7f7f9;
  --color-table-header: #fff8e2;
  --color-hover: #ffe595;
  --color-hover-dark: #ffd558;
  --color-card-background: #ffffff;
  --color-card-border: #cdcdcd;
  --color-table-border: #d0d0d0;
  --color-glyph: #555555;

  --color-tooltip: #2d3436;
  --color-text-tooltip: var(--color-table-row);

  --color-text-error: #af2323;
  --color-card-error-border: #d27676;
  --color-card-error-background: #fbe7e7;

  --color-text-info: #004080;
  --color-card-info-border: #4da6ff;
  --color-card-info-background: #e6f3ff;

  --color-text-success: #194d19;
  --color-card-success-border: #79d279;
  --color-card-success-background: #ecf9ec;

  --gap-small: 0.2rem;
  --gap-medium: 0.5rem;
  --gap-large: 1.5rem;

  --padding-small: 0.2rem;
  --padding-medium: 0.5rem;
  --padding-large: 1.5rem;

  --border-radius: 5px;

  --font-family: Ubuntu, Roboto, Helvetica, sans-serif;

  --font-content-small:0.9rem;
  --font-content-medium: 1rem;
  --font-content-large: 1.1rem;
  --font-header-medium: 1.2rem;
  --font-header-large: 1.5rem;
}

body {
  margin: 0;
  display: block;

  font-family: var(--font-family);
  font-size: var(--font-content-medium);

  background-color: var(--color-main-background);
}

input,
select,
button {
  padding: var(--padding-small);
  font-family: var(--font-family);
  font-size: inherit;
}

select option:disabled {
  font-style: italic;
}

textarea {
  width: 100%;
  height: 3rem;
  box-sizing: border-box;
}

pre {
  margin: 0;
  font-size: small;
  overflow: auto;
}

.header {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  padding: var(--padding-medium);

  background-color: var(--color-main);
  font-size: var(--font-header-medium);

  .header-item {
    border-radius: var(--border-radius);
    padding: var(--padding-medium);

    &:hover {
      background-color: var(--color-hover-dark);
      cursor: pointer;
    }
  }

  .header-spacer {
    color: var(--color-glyph);
  }

  .header-year {
    font-weight: bolder;
    font-size: var(--font-header-large);
  }

  .header-filler {
    width: 100%;
  }

  input[type="submit"] {
    border: none;
    padding: 0;
    margin: 0;
    background-color: inherit;
  }
}

.main {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: var(--gap-large);
}

.section {
  display: flex;
  flex-direction: column;
  gap: var(--gap-medium);
}

.card {
  padding: var(--padding-medium);
  border: solid;
  border-width: 1px;
  border-radius: var(--border-radius);
  border-color: var(--color-card-border);
  background-color: var(--color-card-background);

  font-size: 1.1rem;
}

.status {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--gap-medium);
}

.error {
  color: var(--color-text-error);
  border-color: var(--color-card-error-border);
  background-color: var(--color-card-error-background);
}

.info {
  color: var(--color-text-info);
  border-color: var(--color-card-info-border);
  background-color: var(--color-card-info-background);
}

.success {
  color: var(--color-text-success);
  border-color: var(--color-card-success-border);
  background-color: var(--color-card-success-background);
}

.item {
  display: flex;
  flex-direction: row;
  gap: var(--gap-medium);
  align-items: center;
  padding-left: 0.8rem;
}

.modal-container {
  z-index: 2;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.modal {
  width: 80%;
  height: 90%;

  display: flex;
  flex-direction: column;
  overflow: auto;
  gap: var(--gap-large);
  padding: var(--padding-large);
  background-color: var(--color-main-background) !important;

  .modal-header {
    display: flex;
    flex-direction: row;

    .modal-title {
      width: 100%;
    }

    .modal-close-button {
      justify-self: end;
      cursor: pointer;
    }
  }

  .modal-body {
    height: 100%;

    display: flex;
    flex-direction: column;
    gap: var(--gap-medium);
  }
}

.legend-container {
  z-index: 1;
  position: fixed;
  bottom: 1rem;
  right: 1rem;
}

.legend {
  box-shadow: 0 0 5px var(--color-card-border);
  padding: 0;
}

.legend-table {
  td {
    padding: var(--padding-small);
    border-radius: var(--border-radius);
  }

  tr {
    border-radius: var(--border-radius);
  }
}

.title {
  display: flex;
  flex-direction: row;
  gap: var(--gap-medium);

  font-size: var(--font-header-large);
  font-weight: bold;
}

.large {
  font-size: var(--font-content-large);
}

table {
  width: 100%;
  border: none;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;

  thead,
  tfoot {
    font-weight: bold;
    background-color: var(--color-table-header);
  }

  tr {
    border-bottom: 1px solid var(--color-table-border);
    border-top: 1px solid var(--color-table-border);
  }

  tbody {
    tr {
      &:hover {
        background-color: var(--color-hover) !important;
      }
    }
  }

  th {
    padding: var(--padding-medium);
  }

  thead.sticky-header {
    position: sticky;
    top: 0;
  }

  td {
    padding: var(--padding-medium);
    vertical-align: top;

    .material-symbols-outlined {
      color: var(--color-glyph);
    }
  }

  .number {
    font-family: monospace;
  }

  .soft {
    color: var(--color-table-border);
  }

  .bold {
    font-weight: bold;
  }

  .highlight {
    background-color: var(--color-table-row);
  }

  .nowrap {
    white-space: nowrap;
  }

  .red {
    color: var(--color-text-error);
  }

  .r-align {
    text-align: right;
  }

  .v-center {
    display: flex;
    flex-direction: row;
    gap: var(--gap-medium);
    align-items: center;
  }

  .td-button {
    cursor: pointer;

    &:hover {
      background-color: var(--color-hover-dark);
    }
  }
}

.expenses-table {
  tr:nth-child(even) {
    background-color: var(--color-table-row);
  }

  tbody {
    tr {
      &:hover {
        cursor: pointer;
      }
    }
  }

  .category {
    padding: var(--padding-small);

    select {
      width: 100%;
    }
  }

  .active-row {
    background-color: var(--color-hover-dark) !important;
  }
}

.login-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100svh;

  > form {
    display: grid;
    gap: var(--gap-medium);
  }

  .login-row {
    display: flex;
    flex-direction: row;
    align-items: center;

    > label {
      width: 5rem;
    }

    > input {
      width: 15rem;
    }
  }

  .login-submit {
    justify-self: end;
  }
}

.edit-form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: var(--gap-medium);
  align-items: center;

  .edit-form-section-header {
    grid-column: 1 / span 2;
    font-weight: bold;
  }

  .edit-form-field-wide {
    grid-column: 1 / span 2;
  }

  .edit-form-buttons {
    grid-column: 2;

    display: flex;
    flex-direction: row;
    gap: var(--gap-medium);
    justify-content: flex-end;
  }

  input[type="checkbox"] {
    justify-self: left;
  }

  .stretch-datepicker {
    width: -webkit-fill-available;
  }
}

.material-symbols-outlined {
  font-variation-settings: "opsz" 24;
}

.button {
  border: none;
  border-radius: var(--border-radius);
  width: fit-content;
  height: fit-content;
  padding: 0.5rem !important;

  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--gap-small);

  &:hover {
    background-color: var(--color-hover);
    cursor: pointer;
  }

  .material-symbols-outlined {
    color: var(--color-glyph);
  }
}

.button-small {
  padding: var(--padding-small) !important;

}

.pill {
  font-size: 0.8rem;
  padding: 0.3rem;
  border: solid;
  border-width: 1px;
  border-color: var(--color-hover);
  border-radius: var(--border-radius);
  background-color: var(--color-table-header);
}

.loading-container {
  z-index: 2;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  transition-property: opacity;
  transition-duration: 0.5s;
}

.flexrow {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--gap-medium);

  select {
    width: 100%;
  }
}

.tooltip-cell {
  position: relative;
}

.tooltip-cell:hover::after {
  content: attr(data-tooltip);
  position: absolute;
  bottom: 100%; /* Sits exactly on the top border of the cell */
  left: 50%;
  transform: translate(-50%, -5px); /* Centers and adds a small gap */

  background-color: var(--color-tooltip);
  color: var(--color-text-tooltip);
  padding: 5px 10px;
  border-radius: var(--border-radius);
  font-size: var(--font-content-small);
  font-weight: normal;
  white-space: nowrap;

  z-index: 100;
  pointer-events: none; /* Prevents the tooltip from flickering if mouse moves over it */
}

.tooltip-cell:hover::before {
  content: "";
  position: absolute;
  bottom: 100%;
  left: 50%;
  transform: translateX(-50%);

  /* https://css-tricks.com/snippets/css/css-triangle/ */
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid var(--color-tooltip);

  z-index: 100;
  pointer-events: none;
}

